tests/dataset/tpc-ds/compiler/c/q41.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
static int lower = 100;

typedef struct {
  const char *product_name;
  int manufact_id;
  int manufact;
  const char *category;
  const char *color;
  const char *units;
  const char *size;
} item_t;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q41_simplified_result;
static void test_TPCDS_Q41_simplified() {
  list_string tmp1 = list_string_create(2);
  tmp1.data[0] = "Blue Shirt";
  tmp1.data[1] = "Red Dress";
  int tmp2 = 1;
  if (test_TPCDS_Q41_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q41_simplified_result.len; i3++) {
      if (test_TPCDS_Q41_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  item_t item[] = {(item_t){.product_name = "Blue Shirt",
                            .manufact_id = 100,
                            .manufact = 1,
                            .category = "Women",
                            .color = "blue",
                            .units = "pack",
                            .size = "M"},
                   (item_t){.product_name = "Red Dress",
                            .manufact_id = 120,
                            .manufact = 1,
                            .category = "Women",
                            .color = "red",
                            .units = "pack",
                            .size = "M"},
                   (item_t){.product_name = "Pants",
                            .manufact_id = 200,
                            .manufact = 2,
                            .category = "Men",
                            .color = "black",
                            .units = "pair",
                            .size = "L"}};
  int item_len = sizeof(item) / sizeof(item[0]);
  item_list_t tmp4 = item_list_t_create(item_len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < item_len; tmp6++) {
    item_t i2 = item[tmp6];
    if (!(i2.manufact == i1.manufact && i2.category == i1.category)) {
      continue;
    }
    tmp4.data[tmp5] = i2;
    tmp5++;
  }
  tmp4.len = tmp5;
  int tmp7 = int_create(item_len);
  const char **tmp10 = (const char **)malloc(sizeof(const char *) * item_len);
  int tmp8 = 0;
  for (int tmp9 = 0; tmp9 < item_len; tmp9++) {
    item_t i1 = item[tmp9];
    if (!(i1.manufact_id >= lower && i1.manufact_id <= lower + 40 &&
          tmp4.len > 1)) {
      continue;
    }
    tmp7.data[tmp8] = i1.product_name;
    tmp10[tmp8] = i1.product_name;
    tmp8++;
  }
  tmp7.len = tmp8;
  for (int i13 = 0; i13 < tmp8 - 1; i13++) {
    for (int i14 = i13 + 1; i14 < tmp8; i14++) {
      if (tmp10[i13] > tmp10[i14]) {
        const char *tmp11 = tmp10[i13];
        tmp10[i13] = tmp10[i14];
        tmp10[i14] = tmp11;
        const char *tmp12 = tmp7.data[i13];
        tmp7.data[i13] = tmp7.data[i14];
        tmp7.data[i14] = tmp12;
      }
    }
  }
  int result = tmp7;
  _json_int(result);
  test_TPCDS_Q41_simplified_result = result;
  test_TPCDS_Q41_simplified();
  free(tmp4.data);
  free(result.data);
  return 0;
}
